--- a/index.html
+++ b/index.html
@@ -66,6 +66,52 @@
         </div>
       </nav>
     </header>
+
+    <main>
+      <div>
+        <img src="./assets/img/illustration-1.svg" />
+      </div>
+      <div>
+        <h1>All your files in one secure location,acceseble anywhere.</h1>
+        <p>
+          Fylo store your most important file in one secure locatioon. Acces the
+          Wherever you need, share and collaborate with friens, family, and
+          co-workers.
+        </p>
+
+        <input type="text" placeholder="Enter your Email" />
+        <button type="button">Get Started</button>
+      </div>
+
+      <div>
+        <img src="./assets/img/illustration-2.svg" />
+      </div>
+
+      <div>
+        <h2>See how Fylo works</h2>
+        <img src="./assets/img/icon-arrow.svg" />
+
+        <details>
+          <summary>
+            <div>
+              <p>
+                " Fylo has improve our team productivity by an order of magnitude. Since makin the switch our team has become a well-oiles collaboration machine.
+
+                <div>
+                  <img src="./assets/img/avatar-testimonial.jpg">
+                  <div>
+                    <h3>Kyle Burton</h3>
+                    <p>Founder & CEO, Huddle</p>
+                  </div>
+
+                </div>
+              </p>
+            </div>
+          </summary>
+        </details>
+      </div>
+    </main>
+
     <!--JS-->
     <script
       src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
