--- a/index.html
+++ b/index.html
@@ -70,23 +70,23 @@
             Never let location be an issue when accessing your files.Fylo has
             you covers for all your life storage needs.
           </p>
-          <p class="section-2__p">
+          <p class="section-2__p2">
             Securely share files and folder with friends, family and colleagues
             for live collaboration. No email attachments requiered!
           </p>
-          <h4 class="section-2__h4">See how Fylo works</h4>
-          <img
-            class="section-2__arrow"
-            src="./assets/img/icon- 
-          arrow.svg"
-          />
+
+          <span class="section2-span"
+            ><h4 class="section-2__h4">See how Fylo works</h4>
+            <i class="fa-solid fa-arrow-right"></i
+          ></span>
         </div>
       </div>
 
       <div class="section-3">
+        <i class="fa-solid fa-2 fa-quote-left"></i>
         <p class="section-3__p">
-          " Fylo has improve our team productivity by an order of magnitude.
-          Since makin the switch our team has become a well-oiles collaboration
+          Fylo has improve our team productivity by an order of magnitude. Since
+          makin the switch our team has become a well-oiles collaboration
           machine.
         </p>
         <div class="section-3__div">
@@ -122,7 +122,7 @@
       <footer class="footer">
         <div class="footer__divp">
           <div class="footer__divp__1">
-            <img src="" alt="" />
+            <img class="img-fylo" src="./assets/img/logo.svg" alt="" />
           </div>
           <div class="footer__divp__2">
             <span> Phone: +1-543-123-4567</span>
