arreglos css icons footer

--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
           </nav>
 
           <div class="footer__imgdiv">
-            <span><i class="fa-brands fa-facebook"></i></span>
+            <span><i class="fa-brands img-icon fa-facebook"></i></span>
             <span><i class="fa-brands fa-instagram"></i></span>
             <span><i class="fa-brands fa-twitter"></i></span>
           </div>
