--- a/index.html
+++ b/index.html
@@ -22,15 +22,16 @@
   </head>
   <body>
     <header class="header">
+      <div class="header__logo"><img src="./assets/img/logo.svg" alt="" /></div>
       <ul class="nav justify-content-end">
         <li class="nav-item">
-          <a class="nav-link active" href="#">Active</a>
+          <a class="nav-link active" href="#">Features</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Link</a>
+          <a class="nav-link" href="#">Team</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Link</a>
+          <a class="nav-link" href="#">Sing In</a>
         </li>
       </ul>
     </header>
@@ -59,47 +60,50 @@
         </div>
       </div>
 
-      <div>
-        <img class="img-2__img" src="./assets/img/illustration-2.svg" />
-      </div>
-
-      <div class="section-2">
-        <div class="section-2__div">
-          <h2 class="section-2__h2">Stay productive, wherever you a re</h2>
-          <p class="section-2__p">
-            Never let location be an issue when accessing your files.Fylo has
-            you covers for all your life storage needs.
-          </p>
-          <p class="section-2__p2">
-            Securely share files and folder with friends, family and colleagues
-            for live collaboration. No email attachments requiered!
-          </p>
-
-          <span class="section2-span"
-            ><h4 class="section-2__h4">See how Fylo works</h4>
-            <i class="fa-solid fa-arrow-right"></i
-          ></span>
+      <img class="curve-mobile" src="./assets/img/bg-curve-mobile.svg" />
+      <section class="background-color">
+        <div>
+          <img class="img-2__img" src="./assets/img/illustration-2.svg" />
         </div>
-      </div>
 
-      <div class="section-3">
-        <i class="fa-solid fa-2 fa-quote-left"></i>
-        <p class="section-3__p">
-          Fylo has improve our team productivity by an order of magnitude. Since
-          makin the switch our team has become a well-oiles collaboration
-          machine.
-        </p>
-        <div class="section-3__div">
-          <img
-            class="section-3__img"
-            src="./assets/img/avatar-testimonial.jpg"
-          />
-          <div class="section-3__div__div">
-            <h3>Kyle Burton</h3>
-            <p>Founder & CEO, Huddle</p>
+        <div class="section-2">
+          <div class="section-2__div">
+            <h2 class="section-2__h2">Stay productive, wherever you a re</h2>
+            <p class="section-2__p">
+              Never let location be an issue when accessing your files.Fylo has
+              you covers for all your life storage needs.
+            </p>
+            <p class="section-2__p2">
+              Securely share files and folder with friends, family and
+              colleagues for live collaboration. No email attachments requiered!
+            </p>
+
+            <span class="section2-span"
+              ><h4 class="section-2__h4">See how Fylo works</h4>
+              <i class="fa-solid fa-arrow-right"></i
+            ></span>
           </div>
         </div>
-      </div>
+
+        <div class="section-3">
+          <i class="fa-solid fa-2 fa-quote-left"></i>
+          <p class="section-3__p">
+            Fylo has improve our team productivity by an order of magnitude.
+            Since makin the switch our team has become a well-oiles
+            collaboration machine.
+          </p>
+          <div class="section-3__div">
+            <img
+              class="section-3__img"
+              src="./assets/img/avatar-testimonial.jpg"
+            />
+            <div class="section-3__div__div">
+              <h3>Kyle Burton</h3>
+              <p>Founder & CEO, Huddle</p>
+            </div>
+          </div>
+        </div>
+      </section>
 
       <div class="section-4">
         <h2 class="section-4__h2">Get earle access today</h2>
@@ -125,8 +129,20 @@
             <img class="img-fylo" src="./assets/img/logo.svg" alt="" />
           </div>
           <div class="footer__divp__2">
-            <span> Phone: +1-543-123-4567</span>
-            <span> example@fylo.com</span>
+            <span>
+              <img
+                class="footer__divp__2__img"
+                src="./assets/img/icon-phone.svg "
+              />
+              Phone: +1-543-123-4567</span
+            >
+            <span>
+              <img
+                class="footer__divp__2__img"
+                src="./assets/img/icon-email.svg "
+              />
+              example@fylo.com</span
+            >
           </div>
 
           <nav class="footer__nav1">
