cambio pantalla grande css

--- a/index.html
+++ b/index.html
@@ -18,6 +18,11 @@
     ></script>
     <!--Hoja de estilos-->
     <link rel="stylesheet" href="./style.css" />
+    <!---FontGoogle-->
+    <link
+      href="https://fonts.googleapis.com/css2?family=Open+Sans&family=Raleway:wght@400;700;800&display=swap"
+      rel="stylesheet"
+    />
     <title>Fylo-landin-page</title>
   </head>
   <body>
@@ -37,69 +42,76 @@
     </header>
 
     <main class="main">
-      <div class="img-1">
-        <img class="img-1__img" src="./assets/img/illustration-1.svg" />
-      </div>
-      <div class="section-1">
-        <h1 class="section-1__h1">
-          All your files in one secure location, acceseble <br />anywhere.
-        </h1>
-        <p class="section-1__p">
-          Fylo store your most important file in one secure location. Acces the
-          Wherever you need, share and collaborate with friens, family, and
-          co-workers.
-        </p>
-
-        <div class="div--input">
-          <input
-            class="section-1__input"
-            type="text"
-            placeholder="Enter your Email"
-          /><br />
-          <button class="section-1__button" type="button">Get Started</button>
-        </div>
-      </div>
-
-      <img class="curve-mobile" src="./assets/img/bg-curve-mobile.svg" />
-      <section class="background-color">
-        <div>
-          <img class="img-2__img" src="./assets/img/illustration-2.svg" />
+      <section class="section-desk-1">
+        <div class="img-1">
+          <img class="img-1__img" src="./assets/img/illustration-1.svg" />
         </div>
 
-        <div class="section-2">
-          <div class="section-2__div">
-            <h2 class="section-2__h2">Stay productive, wherever you a re</h2>
-            <p class="section-2__p">
-              Never let location be an issue when accessing your files.Fylo has
-              you covers for all your life storage needs.
-            </p>
-            <p class="section-2__p2">
-              Securely share files and folder with friends, family and
-              colleagues for live collaboration. No email attachments requiered!
-            </p>
+        <div class="section-1">
+          <h1 class="section-1__h1">
+            All your files in one secure location, acceseble anywhere.
+          </h1>
+          <p class="section-1__p">
+            Fylo store your most important file in one secure location. Acces
+            the Wherever you need, share and collaborate with friens, family,
+            and co-workers.
+          </p>
 
-            <span class="section2-span"
-              ><h4 class="section-2__h4">See how Fylo works</h4>
-              <i class="fa-solid fa-arrow-right"></i
-            ></span>
+          <div class="div--input">
+            <input
+              class="section-1__input"
+              type="text"
+              placeholder="Enter your Email"
+            /><br />
+            <button class="section-1__button" type="button">Get Started</button>
           </div>
         </div>
+      </section>
 
-        <div class="section-3">
-          <i class="fa-solid fa-2 fa-quote-left"></i>
-          <p class="section-3__p">
-            Fylo has improve our team productivity by an order of magnitude.
-            Since makin the switch our team has become a well-oiles
-            collaboration machine.
-          </p>
-          <div class="section-3__div">
-            <img
-              class="section-3__img"
-              src="./assets/img/avatar-testimonial.jpg"
-            />
-            <div class="section-3__div__div">
-              <h3>Kyle Burton</h3>
-              <p>Founder & CEO, Huddle</p>
+      <section class="section-desk-2">
+        <img class="curve-mobile" src="./assets/img/bg-curve-mobile.svg" />
+
+        <div class="background-color">
+          <div class="img-2__div-img">
+            <img class="img-2__img" src="./assets/img/illustration-2.svg" />
+          </div>
+
+          <div class="section-2">
+            <div class="section-2__div">
+              <h2 class="section-2__h2">Stay productive, wherever you are</h2>
+              <p class="section-2__p">
+                Never let location be an issue when accessing your files.Fylo
+                has you covers for all your life storage needs.
+              </p>
+              <p class="section-2__p2">
+                Securely share files and folder with friends, family and
+                colleagues for live collaboration. No email attachments
+                requiered!
+              </p>
+
+              <span class="section2-span"
+                ><h4 class="section-2__h4">See how Fylo works</h4>
+                <i class="fa-solid fa-arrow-right"></i
+              ></span>
+            </div>
+          </div>
+
+          <div class="section-3">
+            <i class="fa-solid fa-2 fa-quote-left"></i>
+            <p class="section-3__p">
+              Fylo has improve our team productivity by an order of magnitude.
+              Since makin the switch our team has become a well-oiles
+              collaboration machine.
+            </p>
+            <div class="section-3__div">
+              <img
+                class="section-3__img"
+                src="./assets/img/avatar-testimonial.jpg"
+              />
+              <div class="section-3__div__div">
+                <h3>Kyle Burton</h3>
+                <p>Founder & CEO, Huddle</p>
+              </div>
             </div>
           </div>
         </div>
