--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
                 src="./assets/img/avatar-testimonial.jpg"
               />
               <div class="section-3__div__div">
-                <h3>Kyle Burton</h3>
+                <h4 class="section-3__div__div--h4">Kyle Burton</h4>
                 <p>Founder & CEO, Huddle</p>
               </div>
             </div>
@@ -118,21 +118,24 @@
       </section>
 
       <div class="section-4">
-        <h2 class="section-4__h2">Get earle access today</h2>
-        <p class="section-4__p">
-          It only takes a minut to sign up and our free starter tier is
-          extremely generous. If you have any questions,our support team would
-          be happy to help you.
-        </p>
-
-        <input
-          class="section-4__input"
-          type="text"
-          placeholder="Enter your Email"
-        />
-        <button class="section-4__button" type="button">
-          Get Started for free
-        </button>
+        <div class="section-4--text">
+          <h2 class="section-4__h2">Get earle access today</h2>
+          <p class="section-4__p">
+            It only takes a minut to sign up and our free starter tier is
+            extremely generous. If you have any questions,our support team would
+            be happy to help you.
+          </p>
+        </div>
+        <div class="section-4--inputdiv">
+          <input
+            class="section-4__input"
+            type="text"
+            placeholder="Enter your Email"
+          />
+          <button class="section-4__button" type="button">
+            Get Started for free
+          </button>
+        </div>
       </div>
 
       <footer class="footer">
@@ -140,58 +143,60 @@
           <div class="footer__divp__1">
             <img class="img-fylo" src="./assets/img/logo.svg" alt="" />
           </div>
-          <div class="footer__divp__2">
-            <span>
-              <img
-                class="footer__divp__2__img"
-                src="./assets/img/icon-phone.svg "
-              />
-              Phone: +1-543-123-4567</span
-            >
-            <span>
-              <img
-                class="footer__divp__2__img"
-                src="./assets/img/icon-email.svg "
-              />
-              example@fylo.com</span
-            >
-          </div>
+          <div class="footer__divp1">
+            <div class="footer__divp__2">
+              <span class="footer__divp__2-span">
+                <img
+                  class="footer__divp__2__img"
+                  src="./assets/img/icon-phone.svg "
+                />
+                Phone: +1-543-123-4567</span
+              >
+              <span class="footer__divp__2-span">
+                <img
+                  class="footer__divp__2__img"
+                  src="./assets/img/icon-email.svg "
+                />
+                example@fylo.com</span
+              >
+            </div>
 
-          <nav class="footer__nav1">
-            <ul class="footer__nav1__ul">
-              <li class="footer__nav1__ul__li">
-                <a class="footer__nav1__ul__li__a">About US</a>
-              </li>
-              <li class="footer__nav1__ul__li">
-                <a class="footer__nav1__ul__li__a">Jobs</a>
-              </li>
-              <li class="footer__nav1__ul__li">
-                <a class="footer__nav1__ul__li__a">Press</a>
-              </li>
-              <li class="footer__nav1__ul__li">
-                <a class="footer__nav1__ul__li__a">Blogs</a>
-              </li>
-            </ul>
-          </nav>
+            <nav class="footer__nav1">
+              <ul class="footer__nav1__ul">
+                <li class="footer__nav1__ul__li">
+                  <a href="#" class="footer__nav1__ul__li__a">About US</a>
+                </li>
+                <li class="footer__nav1__ul__li">
+                  <a href="#" class="footer__nav1__ul__li__a">Jobs</a>
+                </li>
+                <li class="footer__nav1__ul__li">
+                  <a href="#" class="footer__nav1__ul__li__a">Press</a>
+                </li>
+                <li class="footer__nav1__ul__li">
+                  <a href="#" class="footer__nav1__ul__li__a">Blogs</a>
+                </li>
+              </ul>
+            </nav>
 
-          <nav class="footer__nav2">
-            <ul class="footer__nav2__ul">
-              <li class="footer__nav2__ul__li">
-                <a class="footer__nav1__ul__li__a">Contact Us</a>
-              </li>
-              <li class="footer__nav2__ul__li">
-                <a class="footer__nav1__ul__li__a">Terms</a>
-              </li>
-              <li class="footer__nav2__ul__li">
-                <a class="footer__nav1__ul__li__a">Privacy</a>
-              </li>
-            </ul>
-          </nav>
+            <nav class="footer__nav2">
+              <ul class="footer__nav2__ul">
+                <li class="footer__nav2__ul__li">
+                  <a href="#" class="footer__nav1__ul__li__a">Contact Us</a>
+                </li>
+                <li class="footer__nav2__ul__li">
+                  <a href="#" class="footer__nav1__ul__li__a">Terms</a>
+                </li>
+                <li class="footer__nav2__ul__li">
+                  <a href="#" class="footer__nav1__ul__li__a">Privacy</a>
+                </li>
+              </ul>
+            </nav>
 
-          <div class="footer__imgdiv">
-            <span><i class="fa-brands img-icon fa-facebook"></i></span>
-            <span><i class="fa-brands fa-instagram"></i></span>
-            <span><i class="fa-brands fa-twitter"></i></span>
+            <div class="footer__imgdiv">
+              <span><i class="fa-brands img-icon fa-facebook"></i></span>
+              <span><i class="fa-brands fa-instagram"></i></span>
+              <span><i class="fa-brands fa-twitter"></i></span>
+            </div>
           </div>
         </div>
       </footer>
