arreglos css medias

--- a/index.html
+++ b/index.html
@@ -25,10 +25,11 @@
     />
     <title>Fylo-landin-page</title>
   </head>
+
   <body>
     <header class="header">
-      <div class="header__logo"><img src="./assets/img/logo.svg" alt="" /></div>
-      <ul class="nav justify-content-end">
+      <div class="header__logo"><img class = "img-header" src="./assets/img/logo.svg" alt="" /></div>
+      <ul class="nav ">
         <li class="nav-item">
           <a class="nav-link active" href="#">Features</a>
         </li>
