arreglo landing page

--- a/index.html
+++ b/index.html
@@ -68,9 +68,9 @@
           </div>
         </div>
       </section>
-
+      <img class="curve-mobile curva" src="./assets/img/bg-curve-mobile.svg" />
+      
       <section class="section-desk-2">
-        <img class="curve-mobile" src="./assets/img/bg-curve-mobile.svg" />
 
         <div class="background-color">
           <div class="img-2__div-img">
@@ -142,7 +142,7 @@
       <footer class="footer">
         <div class="footer__divp">
           <div class="footer__divp__1">
-            <img class="img-fylo" src="./assets/img/logo.svg" alt="" />
+            <img class="img-fylo" src="./assets/img/logo2.svg" alt="" />
           </div>
           <div class="footer__divp1">
             <div class="footer__divp__2">
